--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,7 +1,15 @@
-# Dockerfile.backend
-FROM node:18
-WORKDIR /app/backend
-COPY backend/package*.json ./
+FROM node:20-alpine
+
+WORKDIR /app
+
+# --- SỬA: Cài thêm curl để dùng trong command check health ---
+RUN apk add --no-cache curl
+
+COPY package*.json ./
 RUN npm install
-COPY backend ./
+
+COPY . .
+
+EXPOSE 5000
+
 CMD ["npm", "start"]
